Mudança do meu email

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -12,7 +12,7 @@
 \emails{
 	\emailaddress{R.J.S.}{rogiel@rogiel.com},
 	\emailaddress{R.C.S.}{csilveira.rodrigo@gmail.com} e
-	\emailaddress{Y.C.}{yichenpoa@gmail.com}
+	\emailaddress{Y.C.}{yichen.wu@ufrgs.br}
 }
 \resume{}
 \abstract{}
