Adoidada imagem representando o pêndulo

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -28,7 +28,14 @@ Nesta atividade de laboratório exploramos os efeitos físicos de dois tipos de 
 \section{Sensor potênciométrico}
 Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo estava conectado à um potenciômetro. A construção está ilustrada na figura \ref{fig:estrutura-pendulo}:
 
-\todo{figura}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.4\textwidth]{images/Pendulo.pdf}
+\caption{Estrutura do pêndulo}
+\label{fig:pendulo}
+\end{figure}
+
+onde $\theta$ é o angulo de inclinação do pêndulo em relação a origem (linha tracejada).
 
 \todo{equacionamento do pendulo}
 
