Corrigida referencia à imagem de estrutura do pêndulo

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -26,7 +26,7 @@ Nesta atividade de laboratório exploramos os efeitos físicos de dois tipos de 
 
 \chapter{Metodologia Experimental}
 \section{Sensor potênciométrico}
-Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo estava conectado à um potenciômetro. A construção está ilustrada na figura \ref{fig:estrutura-pendulo}:
+Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo estava conectado à um potenciômetro. A construção está ilustrada na figura \ref{fig:pendulo}:
 
 \begin{figure}[H]
 \centering
