Adicionada versão PDF da imagem do pêndulo

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -30,7 +30,7 @@ Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.4\textwidth]{images/Pendulo.pdf}
+\includegraphics[width=0.4\textwidth]{../Images/Pendulo.pdf}
 \caption{Estrutura do pêndulo}
 \label{fig:pendulo}
 \end{figure}
