--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -48,26 +48,62 @@ Este pêndulo pode ser modelado eletricamente pelo seguinte circuito:
 \centering
 \includegraphics[width=0.6\textwidth]{Pendulo-Circuito.pdf}
 \caption{Modelo elétrico do pêndulo}
-\label{fig:pendulo}
+\label{fig:pendulo-equivalente}
 \end{figure}
 
 onde $R(angulo)$ é uma resistência variável em função do ângulo $\theta$.
 
-A figura ... representa o fluxo da aquisição de dados utilizado
+A fim de extrair a função de transferência do sensor, realiza-se um experimento com repetição onde, através de um voltímetro, mede-se a tensão elétrica sobre o resistor $R(\theta)$ em função do angulo $\theta$. Com este experimento, pode-se realizar um \textit{fit} cuja função será utilizada como a função de transferência do sensor. Uma vez que o potenciometro é linear, espera-se que a função de transferência é dada na forma da equação \ref{eq:pendulo-tf-forma} e conforme a estrutura apresentada na figura \ref{fig:pendulo}:
+
+\begin{equation}
+	R(\theta) = R_0 + R_1 \times \theta
+	\label{eq:pendulo-tf-forma}
+\end{equation}
+
+onde $R(\theta)$ é a resistência elétrica em do pêndulo $\Omega$ para um dado ângulo de inclinação, $R_0$ é a resistência do pêndulo em $\Omega$ no ângulo de 0 graus, $R_1$ é a variação de resistência elétrica do pêndulo em $\Omega / rad$ em função da variação de ângulo e $\theta$ é a inclinação do pêndulo em $rad$ relativa à sua posição de repouso.
+
+\subsection{Aquisição da resposta temporal do pêndulo}
+
+Para obter a resposta temporal do pêndulo, utilizamos um mecanismo de aquisição de dados conforme a figura \ref{fig:pendulo-fluxo-medidas}:
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{Pendulo-Fluxograma.pdf}
 \caption{Fluxo de aquisição de dados do sistema.}
 $E_n$ indica as etapas de aquisição de dados.
-\label{fig:pendulo}
+\label{fig:pendulo-fluxo-medidas}
 \end{figure}
 
-\todo{equacionamento do pendulo}
+\begin{itemize}
+	\item \textbf{E1}: representa o sensor utilizado, no caso deste experimento um potenciometro;
+	\item \textbf{E2}: representa um amplificador com ganho unitário (buffer);
+	\item \textbf{E3}: representa o filtro anti-alias utilizado para o processo de amostragem;
+	\item \textbf{E4}: representa o processo de amostragem realizado utilizando o LABView e o DAQ (Data Acquisition device)
+	\item \textbf{E5}: no LABView foi armazenado os dados amostrados;
+	\item \textbf{E6}: após o armazenamento dos dados foi realizado o processamento destes dados.
+\end{itemize}
 
-Primeiramente, a fim de obter uma curva de calibração da estrutura, se fez necessário levantar estimativas do valor de resistência \todo{ou tensão} do potenciômetro em função do seu ângulo de oscilação. A fim de conseguir realizar o projeto em tempo hábil, \todo{colocar isso mesmo?} optamos por realizar as medidas em intervalos de 10 em 10 graus de inclinação no intervalo de -80º (oscilação ao lado esquerdo) e 80º (oscilação ao lado direito).
+A cadeia de medidas deste experimento pode ser representada pelo diagrama de blocos da figura \ref{fig:pendulo-cadeia-medidas}:
 
-Com estes dados, e assumindo que o potenciômetro seja linear, podemos assumir que os valores intermediários de tensão mensuradas são proporcionais aos seus limites mensurados (valor medido superior e inferior).
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{Cadeia de medida.pdf}
+\caption{Cadeia de medida com grandezas de entrada e saída}
+\label{fig:pendulo-cadeia-medidas}
+\end{figure}
+
+Para poder estimar o valor do angulo de inclinação do pêndulo em função da tensão elétrica medida pelo fluxo de medida mostrado na figura \ref{fig:pendulo-fluxo-medidas}, precisa-se definir a função de transferência para os 3 blocos definidos.
+
+A função de transferência para o sensor já foi obtida no experimento anterior e é dada na equação \ref{eq:pendulo-tf-forma}. Contudo, para utilizá-la nas medidas realizadas, é preciso que a função de transferência inversa seja obtida, conforme a equação \ref{eq:pendulo-tf-forma-inversa}
+
+\begin{equation}
+	\theta = V^{-1}(\theta) = \theta_0 + \theta_1 \times V
+	\label{eq:pendulo-tf-forma-inversa}
+\end{equation}
+
+onde $\theta$ é a inclinação do pêndulo em radianos, $V^{-1}(\theta)$ é a inversa da função de transferência do pêndulo modelada anteriormente, $\theta_0$ é o offset de angulo correspondente ao offset inicial de tensão elétrica e $\theta_1$ é a constante que define a variação de inclinação em função de uma variação de tensão elétrica do sensor.
+
+A função de transferência do buffer, por definição é constante e igual a um. Uma vez que o amplificador utilizado é de ganho 1 e 
 
 \chapter{Resultados e Discussões}
 
@@ -151,7 +187,7 @@ Após realizar a exportação dos dados utilizamos o software Wolfram Mathematic
 
 \chapter*{Anexos}
 \section{Mathematica}
-\includenotebook{../Resources/Mathematica/Experimento 1-1.pdf}{Experimento 1}
+%\includenotebook{../Resources/Mathematica/Experimento 1-1.pdf}{Experimento 1}
 
 \section{LabVIEW}
 
