Adicionado várias notas de TODO

--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -224,8 +224,39 @@ Sabendo que o ângulo de oscilação do pêndulo é dado pela equação \ref{eq:
 \end{figure}
 \todo{curva do pendulo}
 
+\todo{sensibilidade, resolução de entrada, resolução de saída, erro de linearidade ou de conformidade, incerteza, etc, assim como, a correspondente Cadeia de Medidas Proposta (teórica) e a Cadeia de Medidas Experimental}
+
+\todo{labview+matlab}
+\todo{só matlab}
+
+\todo{determinar a sensibilidade, a resolução de entrada, resolução de saída, o erro de linearidade (ou erro de conformidade se for o caso) de seu sistema}
+
+\todo{Tarefa para Casa: de posse da função de medição de seu sistema determinar a incerteza combinada deste sistema.}
+
+\todo{com os sinais armazenados pelo programa LabVIEW elaborar um procedimento para determinar o decaimento em função do tempo e discutir esse resultado.}
+
+\todo{Medição da Amplitude.}
+\todo{Medição de $\theta_0$}
+\todo{incertezas dos itens anteriores e dos comprimentos}
+
+\todo{amortecimento}
+
+\todo{medição do periodo}
+\todo{grafico de amplitude e periodo}
+
+\todo{modelo de thevenin}
+\todo{grafico saida do pot vs angulo. qual erro?}
+\todo{sensibilidade do circuito anterior}
+
+\todo{medida a 3 fios - só calcular}
+\todo{correção pro offset do 3 fios: medida a 4 fios}
+
+\todo{discutir quantidade de amostras (medidas obtidas) para cada ângulo versus tensão.}
 \todo{calcular a incerteza de TODAS medidas}
 
+
+\todo{experimento do efeito hall}
+\todo{experimento do led}
 
 \chapter{Conclusões}
 
